--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "algebra",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Vectors, Matrices and ... ",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha"
+    "test": "mocha --bail --recursive --reporter nyan"
   },
   "repository": {
     "type": "git",
