--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "engines": {
     "node": ">=0.8"
   },
-  "readmeFilename": "README.md"
+  "readmeFilename": "README.md",
+  "dependencies": {
+    "underscore": "~1.4.3"
+  }
 }
