--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vectors, Matrices and ... ",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --bail --recursive --reporter nyan"
+    "test": "mocha --bail --recursive --reporter nyan",
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,8 @@
   "author": "fibo",
   "license": "BSD",
   "devDependencies": {
-    "mocha": "1.4.2"
+    "mocha": "1.4.2",
+    "browserify": "*"
   },
   "engines": {
     "node": ">=0.8"
