--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "browserify": "*",
     "mocha": "*",
     "should": "*",
-    "typescript": "~0.9.0-1"
+    "typescript": "~0.9.0-1",
+    "grunt-typescript": "~0.2.1"
   },
   "engines": {
     "node": ">=0.8"
