--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "BSD",
   "devDependencies": {
     "browserify": "*",
+    "coffee-script": "*",
     "mocha": "*",
     "should": "*",
     "grunt": "*",
