--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "grunt-contrib-coffee": "*",
     "grunt-contrib-watch": "*",
     "grunt-mocha-cli": "*",
-    "grunt-docco": "~0.2.0"
+    "grunt-docco-multi": "0.0.2"
   },
   "engines": {
     "node": ">=0.8"
