--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "readmeFilename": "README.md",
   "dependencies": {
-    "underscore": "~1.5.1"
+    "underscore": "~1.5.1",
+    "inherits": "~2.0.1"
   }
 }
