--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "vector",
     "math"
   ],
-  "license": [ {
-    "type": "MIT",
-    "url": "http://fibo.mit-license.org/"
-  }
+  "license": [
+    {
+      "type": "MIT",
+      "url": "http://fibo.mit-license.org/"
+    }
   ],
   "devDependencies": {
     "browserify": "*",
@@ -32,7 +33,8 @@
     "grunt-contrib-watch": "*",
     "grunt-mocha-cli": "*",
     "grunt-docco-multi": "0.0.2",
-    "grunt-contrib-jshint": "~0.6.3"
+    "grunt-contrib-jshint": "~0.6.3",
+    "grunt-markdown": "~0.4.0"
   },
   "engines": {
     "node": ">=0.8"
