--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "grunt-mocha-cli": "*",
     "grunt-docco-multi": "0.0.2",
     "grunt-contrib-jshint": "~0.6.3",
-    "grunt-markdown": "~0.4.0"
+    "grunt-markdown": "~0.4.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-open": "~0.2.2"
   },
   "engines": {
     "node": ">=0.8"
