--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-markdown": "~0.4.0",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-open": "~0.2.2"
+    "grunt-open": "~0.2.2",
+    "grunt-contrib-copy": "~0.4.1"
   },
   "engines": {
     "node": ">=0.8"
