--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "grunt-markdown": "~0.4.0",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-open": "~0.2.2",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "matchdep": "~0.3.0"
   },
   "engines": {
     "node": ">=0.8"
@@ -45,6 +46,7 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "underscore": "~1.5.1",
-    "inherits": "~2.0.1"
+    "inherits": "~2.0.1",
+    "grunt-contrib-concat": "~0.3.0"
   }
 }
