--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "license": [
     {
       "type": "MIT",
-      "url": "http://fibo.mit-license.org/"
+      "url": "http://g14n.info/mit-license"
     }
   ],
   "devDependencies": {
