--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "name": "fibo",
     "url": "http://g14n.info"
   },
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "Vectors, Matrices, Tensors",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive --bail --require should --reporter min"
+    "test": "mocha --recursive --bail --require should --reporter min",
+    "build": "browserify -s algebra -e index.js -o dist/algebra.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
     "algebra",
     "matrix",
     "vector",
+    "tensor",
     "math"
   ],
   "license": [
@@ -28,8 +30,9 @@
     }
   ],
   "devDependencies": {
-    "should": "~4.0.4",
-    "mocha": "~1.20.1"
+    "browserify": "^8.1.3",
+    "mocha": "~1.20.1",
+    "should": "~4.0.4"
   },
   "engines": {
     "node": ">=0.8"
