npm run gh-pages

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "description": "Vectors, Matrices, Tensors",
   "main": "index.js",
   "scripts": {
+  	"gh-pages": "jekyll build && git commit -a && git subtree --prefix gh-pages/_site push origin gh-pages",
     "test": "mocha --recursive --bail --require should --reporter min",
     "build": "browserify -s algebra -e index.js -o dist/algebra.js"
   },
