--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ author: Gianluca Casati
 description: Vectors, Matrices, Tensors
 
 source: gh-pages
+destination: gh-pages/_site
 
 permalink: ./:year/:month/:title
 
