--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "scripts": {
     "homepage": "echo -e \"---\ntitle: $npm_package_name\n---\" > gh-pages/index.md; cat README.md >> gh-pages/index.md",
     "package.json": "cp package.json gh-pages/_data",
-    "gh-pages": "npm run jekyll && git commit -a && git subtree --prefix gh-pages push origin gh-pages",
-    "jekyll": "npm run homepage; npm run package.json; cd gh-pages; jekyll build; cd ..",
+    "gh-pages:_data": "npm run package.json; npm run dox",
+    "gh-pages:push": "git subtree --prefix gh-pages push origin gh-pages",
+    "gh-pages:pull": "git subtree --prefix gh-pages pull origin gh-pages",
+    "jekyll": "npm run homepage; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
     "test": "mocha --bail --require should --reporter min --recursive",
     "browserify": "browserify -s $npm_package_name -e index.js -o dist/${npm_package_name}.js",
     "build": "npm test && npm run browserify",
-    "jshint": "jshint -c .jshintrc src/*.js"
+    "jshint": "jshint -c .jshintrc src/*.js",
+    "dox": "cat src/*.js | dox > gh-pages/_data/dox.json"
   },
   "repository": {
     "type": "git",
@@ -36,10 +39,10 @@
     }
   ],
   "devDependencies": {
-    "browserify": "^8.1.3",
-    "jshint": "^2.6.3",
-    "mocha": "~1.20.1",
-    "should": "~4.0.4"
+    "browserify": "^10.1.3",
+    "dox": "^0.7.1",
+    "mocha": "^2.2.4",
+    "should": "^6.0.1"
   },
   "engines": {
     "node": ">=0.8"
