--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 domain: g14n.info
 name: algebra
 encoding: utf-8
+url: http://g14n.info/algebra
 
 author: Gianluca Casati
 description: Vectors, Matrices, Tensors
