--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "license": [
     {
       "type": "MIT",
-      "url": "http://g14n.info/mit-license"
+      "url": "http://g14n.info/mit-license.html"
     }
   ],
   "devDependencies": {
