--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "algebra",
   "homepage": "http://g14n.info/algebra",
   "author": {
-    "name": "fibo",
+    "name": "Gianluca Casati",
     "url": "http://g14n.info"
   },
   "version": "0.6.0",
@@ -38,7 +38,7 @@
   "license": [
     {
       "type": "MIT",
-      "url": "http://g14n.info/mit-license.html"
+      "url": "http://g14n.info/mit-license"
     }
   ],
   "devDependencies": {
