--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "algebra",
   "homepage": "http://g14n.info/algebra",
   "author": {
-    "name": "fibo",
+    "name": "Gianluca Casati",
     "url": "http://g14n.info"
   },
   "version": "0.6.0",
@@ -21,7 +21,7 @@
     "test": "mocha --bail --require should --reporter min --recursive",
     "browserify": "browserify -s $npm_package_name -e index.js -o dist/${npm_package_name}.js",
     "build": "npm test && npm run browserify",
-    "jshint": "jshint -c .jshintrc src/*.js",
+    "jshint": "jshint -c .jshintrc src/*.js test/*.js",
     "dox": "cat src/*.js | dox > gh-pages/_data/dox.json"
   },
   "repository": {
