--- a/_data/package.json
+++ b/_data/package.json
@@ -21,7 +21,7 @@
     "test": "mocha --bail --require should --reporter min --recursive",
     "browserify": "browserify -s $npm_package_name -e index.js -o dist/${npm_package_name}.js",
     "build": "npm test && npm run browserify",
-    "jshint": "jshint -c .jshintrc src/*.js",
+    "jshint": "jshint -c .jshintrc src/*.js test/*.js",
     "dox": "cat src/*.js | dox > gh-pages/_data/dox.json"
   },
   "repository": {
