--- a/_data/package.json
+++ b/_data/package.json
@@ -9,20 +9,20 @@
   "description": "Vectors, Matrices, Tensors",
   "main": "index.js",
   "scripts": {
-    "homepage": "echo \"---\ntitle: $npm_package_name\n---\" > gh-pages/index.md; cat README.md >> gh-pages/index.md",
-    "package.json": "cp package.json gh-pages/_data",
+    "browserify": "browserify -s $npm_package_name -e index.js -o dist/${npm_package_name}.js",
+    "build": "npm test && npm run browserify",
+    "coverage": "npm run istanbul && npm run coveralls",
+    "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
+    "dox": "cat src/*.js | dox > gh-pages/_data/dox.json",
     "gh-pages:_data": "npm run package.json; npm run dox",
     "gh-pages:push": "git subtree --prefix gh-pages push origin gh-pages",
     "gh-pages:pull": "git subtree --prefix gh-pages pull origin gh-pages",
-    "jekyll": "npm run homepage; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
+    "homepage": "echo \"---\ntitle: $npm_package_name\n---\" > gh-pages/index.md; cat README.md >> gh-pages/index.md",
     "istanbul": "istanbul cover _mocha",
-    "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
-    "coverage": "npm run istanbul && npm run coveralls",
-    "test": "mocha --bail --require should --reporter min --recursive",
-    "browserify": "browserify -s $npm_package_name -e index.js -o dist/${npm_package_name}.js",
-    "build": "npm test && npm run browserify",
-    "jshint": "jshint -c .jshintrc src/*.js test/*.js",
-    "dox": "cat src/*.js | dox > gh-pages/_data/dox.json"
+    "jekyll": "npm run homepage; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
+    "jshint": "jshint -c .jshintrc src/**.js test/**.js",
+    "package.json": "cp package.json gh-pages/_data",
+    "test": "mocha --bail --require should --reporter min --recursive"
   },
   "repository": {
     "type": "git",
