--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "version": "0.6.0",
   "homepage": "http://g14n.info/algebra",
   "authors": [
-    "Gianluca Casati <casati_gianluca@yahoo.it>"
+    "Gianluca Casati"
   ],
   "description": "Vectors, Matrices, Tensors",
   "moduleType": [
