--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "index.js",
   "scripts": {
     "browserify": "browserify -s $npm_package_name -e index.js -o dist/${npm_package_name}.js",
-    "build": "npm test && npm run browserify",
+    "build": "npm test && npm run browserify && npm run jekyll",
     "coverage": "npm run istanbul && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
     "dox": "cat src/*.js | dox > gh-pages/_data/dox.json",
