--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "description": "Vectors, Matrices, Tensors",
   "main": "index.js",
   "scripts": {
+    "_build": "npm test && npm run browserify && npm run jekyll",
+    "_pull": "git pull origin master && npm run gh-pages:pull",
+    "_push": "git push origin master && npm run gh-pages:push",
     "browserify": "browserify -s $npm_package_name -e index.js -o dist/${npm_package_name}.js",
-    "build": "npm test && npm run browserify && npm run jekyll",
     "coverage": "npm run istanbul && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
     "dox": "cat src/*.js | dox > gh-pages/_data/dox.json",
@@ -21,7 +23,7 @@
     "istanbul": "istanbul cover _mocha",
     "jekyll": "npm run homepage; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
     "jshint": "jshint -c .jshintrc src/**.js test/**.js",
-    "package.json": "cp package.json gh-pages/_data",
+    "package.json": "cp package.json gh-pages/_data/",
     "test": "mocha --bail --require should --reporter min --recursive"
   },
   "repository": {
