--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "description": "Vectors, Matrices, Tensors",
   "main": "index.js",
   "scripts": {
-    "_build": "npm test && npm run browserify && npm run latex && npm run jekyll",
+    "_build": "npm test && npm run browserify && npm run tex && npm run jekyll",
     "_pull": "git pull origin master && npm run gh-pages:pull",
     "_push": "git push origin master && npm run gh-pages:push",
     "browserify": "browserify -s $npm_package_name -e index.js -o dist/${npm_package_name}.js",
@@ -23,9 +23,9 @@
     "istanbul": "istanbul cover _mocha",
     "jekyll": "npm run homepage; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
     "jshint": "jshint -c .jshintrc src/**.js test/**.js",
-    "latex": "npm run latex:display; npm run latex:inline",
-    "latex:display": "ls gh-pages/latex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
-    "latex:inline": "ls gh-pages/latex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
+    "tex": "npm run tex:display; npm run tex:inline",
+    "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
+    "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
     "package.json": "cp package.json gh-pages/_data/",
     "test": "mocha --bail --require should --reporter min --recursive"
   },
