--- a/gh-pages/_data/package.json
+++ b/gh-pages/_data/package.json
@@ -27,7 +27,7 @@
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
     "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
     "package.json": "cp package.json gh-pages/_data/",
-    "test": "mocha --bail --require should --reporter min --recursive"
+    "test": "mocha --bail --require should --reporter min #--recursive"
   },
   "repository": {
     "type": "git",
@@ -58,8 +58,8 @@
     "should": "^6.0.1"
   },
   "dependencies": {
-    "algebra-group": "^0.1.0",
-    "algebra-ring": "^0.1.0",
+    "algebra-group": "^0.2.0",
+    "algebra-ring": "^0.2.0",
     "inherits": "~2.0.1",
     "katex": "^0.5.0",
     "strict-mode": "~0.1.4"
