--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "dox": "^0.7.1",
     "install": "^0.1.8",
     "istanbul": "^0.3.14",
-    "mocha": "^2.2.4",
+    "mocha": "^2.3.1",
     "mocha-lcov-reporter": "0.0.2",
     "npm": "^2.9.1",
     "should": "^6.0.1"
@@ -62,6 +62,7 @@
     "algebra-ring": "^0.2.0",
     "inherits": "~2.0.1",
     "katex": "^0.5.0",
+    "laplace-determinant": "^0.1.0",
     "strict-mode": "~0.1.4"
   }
 }
