--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "algebra-group": "^0.2.0",
     "algebra-ring": "^0.2.0",
     "inherits": "~2.0.1",
+    "is-integer": "^1.0.6",
     "katex": "^0.5.0",
     "laplace-determinant": "^0.1.0",
     "strict-mode": "~0.1.4"
