--- a/_data/package.json
+++ b/_data/package.json
@@ -6,7 +6,7 @@
     "url": "http://g14n.info"
   },
   "version": "0.6.0",
-  "description": "Vectors, Matrices, Tensors",
+  "description": "Vectors, Matrices; Real, Complex, Quaternion; custom groups and rings",
   "main": "index.js",
   "scripts": {
     "_build": "npm test && npm run browserify && npm run tex && npm run jekyll",
@@ -27,7 +27,7 @@
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
     "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
     "package.json": "cp package.json gh-pages/_data/",
-    "test": "mocha --bail --require should --reporter min #--recursive"
+    "test": "mocha --bail --require should --reporter min --recursive"
   },
   "repository": {
     "type": "git",
@@ -40,28 +40,25 @@
     "tensor",
     "math"
   ],
-  "license": [
-    {
-      "type": "MIT",
-      "url": "http://g14n.info/mit-license"
-    }
-  ],
+  "license": "MIT",
   "devDependencies": {
     "browserify": "^10.1.3",
     "coveralls": "^2.11.2",
     "dox": "^0.7.1",
+    "katex": "^0.5.0",
     "install": "^0.1.8",
     "istanbul": "^0.3.14",
-    "mocha": "^2.2.4",
+    "mocha": "^2.3.1",
     "mocha-lcov-reporter": "0.0.2",
-    "npm": "^2.9.1",
     "should": "^6.0.1"
   },
   "dependencies": {
     "algebra-group": "^0.2.0",
     "algebra-ring": "^0.2.0",
+    "cayley-dickson": "^0.1.0",
     "inherits": "~2.0.1",
-    "katex": "^0.5.0",
-    "strict-mode": "~0.1.4"
+    "is-integer": "^1.0.6",
+    "laplace-determinant": "^0.1.0",
+    "strict-mode": "^0.4.1"
   }
 }
