--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "inherits": "^2.0.1",
     "is-integer": "^1.0.6",
     "laplace-determinant": "^0.1.0",
+    "multidim-array-index": "^0.1.1",
     "strict-mode": "^0.4.1"
   }
 }
