--- a/package.json
+++ b/package.json
@@ -71,10 +71,12 @@
     "algebra-group": "^0.2.0",
     "algebra-ring": "^0.2.0",
     "cayley-dickson": "^0.1.0",
+    "indices-permutations": "^0.1.0",
     "inherits": "^2.0.1",
     "is-integer": "^1.0.6",
     "laplace-determinant": "^0.1.0",
     "multidim-array-index": "^0.1.1",
-    "strict-mode": "^0.4.1"
+    "strict-mode": "^0.4.1",
+    "tensor-product": "^0.1.0"
   }
 }
