removed gh-pages/dist

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "check-deps": "npm outdated",
     "coverage": "npm run istanbul && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
-    "cp": "npm run cp:dist; npm run cp:package.json",
-    "cp:dist": "cp -r dist/ gh-pages/",
+    "cp": "npm run cp:package.json",
     "cp:package.json": "cp package.json gh-pages/_data/",
     "decrypt:.coveralls.yml": "keybase decrypt -o .coveralls.yml .coveralls.yml.asc",
     "dox": "cat src/*.js | dox > gh-pages/_data/dox.json",
