arrow functions with babel

--- a/_data/package.json
+++ b/_data/package.json
@@ -17,16 +17,15 @@
     "_pull": "git pull origin master && npm run gh-pages:pull",
     "_push": "git push origin master && npm run gh-pages:push",
     "browserify": "npm run browserify:dist; npm run browserify:test",
-    "browserify:dist": "browserify -r ./index.js:${npm_package_name} -o dist/${npm_package_name}.js",
-    "browserify:test": "browserify test/*.js -o gh-pages/test/bundle.js",
+    "browserify:dist": "browserify -r ./index.js:${npm_package_name} -t babelify -o dist/${npm_package_name}.js",
+    "browserify:test": "browserify test/*.js -t babelify -o gh-pages/test/bundle.js",
     "check-deps": "npm outdated",
     "coverage": "npm run istanbul && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls --verbose",
     "cp": "npm run cp:package.json",
     "cp:package.json": "cp package.json gh-pages/_data/",
     "decrypt:.coveralls.yml": "keybase decrypt -o .coveralls.yml .coveralls.yml.asc",
-    "dox": "cat src/*.js | dox > gh-pages/_data/dox.json",
-    "gh-pages:_data": "npm run package.json; npm run dox",
+    "gh-pages:_data": "npm run package.json",
     "gh-pages:push": "git subtree --prefix gh-pages push origin gh-pages",
     "gh-pages:pull": "git subtree --prefix gh-pages pull origin gh-pages",
     "homepage": "echo \"---\ntitle: $npm_package_name\n---\" > gh-pages/index.md; cat README.md >> gh-pages/index.md",
@@ -61,9 +60,10 @@
     "math"
   ],
   "devDependencies": {
+    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
+    "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "coveralls": "^2.11.6",
-    "dox": "^0.8.0",
     "istanbul": "^0.4.1",
     "jshint": "^2.8.0",
     "katex": "^0.5.1",
