added experimental es6 build

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,10 @@
   "main": [
     "dist/algebra.js",
     "dist/algebra.map",
-    "dist/algebra.min.js"
+    "dist/algebra.min.js",
+    "dist/algebra.es6.js",
+    "dist/algebra.es6.map",
+    "dist/algebra.es6.min.js"
   ],
   "homepage": "http://g14n.info/algebra",
   "authors": [
