removed es6 bundle, it cannot be minified

--- a/_data/package.json
+++ b/_data/package.json
@@ -17,9 +17,7 @@
     "_pull": "git pull origin master && npm run gh-pages:pull",
     "_push": "git push origin master && npm run gh-pages:push",
     "browserify": "npm run browserify:dist; npm run browserify:test",
-    "browserify:dist": "npm run browserify:dist:es5; npm run browserify:dist:es6",
-    "browserify:dist:es6": "browserify -r ./index.js:${npm_package_name} -o dist/${npm_package_name}.es6.js",
-    "browserify:dist:es5": "browserify -r ./index.js:${npm_package_name} -t babelify -o dist/${npm_package_name}.js",
+    "browserify:dist": "browserify -r ./index.js:${npm_package_name} -t babelify -o dist/${npm_package_name}.js",
     "browserify:test": "browserify test/*.js -t babelify -o gh-pages/test/bundle.js",
     "check-deps": "npm outdated",
     "coverage": "npm run istanbul && npm run coveralls",
@@ -34,9 +32,7 @@
     "istanbul": "istanbul cover _mocha",
     "jekyll": "npm run homepage; npm run cp; npm run gh-pages:_data; cd gh-pages; jekyll build; cd ..",
     "lint": "jshint -c .jshintrc src/**.js test/**.js",
-    "minify": "npm run minify:es5; npm run minify:es6",
-    "minify:es5": "cd dist; uglifyjs ${npm_package_name}.js --source-map ${npm_package_name}.map --output ${npm_package_name}.min.js --compress --mangle --preamble \"// ${npm_package_name}.js ${npm_package_homepage} \n// license ${npm_package_license}\"; cd -",
-    "minify:es6": "cd dist; uglifyjs ${npm_package_name}.es6.js --source-map ${npm_package_name}.es6.map --output ${npm_package_name}.es6.min.js --compress --mangle --preamble \"// ${npm_package_name}.js ${npm_package_homepage} \n// license ${npm_package_license}\"; cd -",
+    "minify": "cd dist; uglifyjs ${npm_package_name}.js --source-map ${npm_package_name}.map --output ${npm_package_name}.min.js --compress --mangle --preamble \"// ${npm_package_name}.js ${npm_package_homepage} \n// license ${npm_package_license}\"; cd -",
     "tex": "npm run tex:display; npm run tex:inline",
     "tex:display": "ls gh-pages/tex-snippets/display/*.tex | while read texfile; do cat $texfile | katex --display-mode > gh-pages/_includes/display/$(basename ${texfile%.tex}).html; done",
     "tex:inline": "ls gh-pages/tex-snippets/inline/*.tex | while read texfile; do cat $texfile | katex > gh-pages/_includes/inline/$(basename ${texfile%.tex}).html; done",
@@ -87,7 +83,7 @@
     "laplace-determinant": "^0.1.0",
     "multidim-array-index": "^0.2.0",
     "not-defined": "^1.0.0",
-    "static-props": "^0.1.0",
+    "static-props": "^0.2.0",
     "strict-mode": "^0.5.0",
     "tensor-contraction": "^0.1.0",
     "tensor-product": "^0.2.0"
